# todo-microservices-monorepo

./: LICENSE
infrastructure/kong/: docker-compose.yaml  kong.conf
services/auth-service/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
services/auth-service/src/auth/: settings.py  wsgi.py
services/auth-service/src/auth/models/: __init__.py  user.py
services/auth-service/src/auth/schemas/: __init__.py  token.py  user.py
services/auth-service/src/auth/urls/: __init__.py
services/auth-service/src/auth/urls/api/: __init__.py
services/auth-service/src/auth/urls/api/v1/: __init__.py  account.py
services/auth-service/src/auth/utils/: __init__.py
services/auth-service/src/auth/utils/decorators/: __init__.py  authentication.py
services/auth-service/src/auth/views/: account.py
services/todo-service/: .gitignore  Dockerfile  docker-compose.yaml  package-lock.json  package.json
services/todo-service/src/: app.js  settings.js
services/todo-service/src/controllers/: index.js  todo.controller.js
services/todo-service/src/middlewares/: authentication.js  index.js
services/todo-service/src/models/: index.js  task.js  task.model.js
services/todo-service/src/repositories/: index.js  todo.repository.js
services/todo-service/src/routers/: index.js
services/todo-service/src/routers/api/: index.js
services/todo-service/src/routers/api/v1/: index.js  todo.js  (+1 more)
services/todo-service/src/services/: todo.service.js
services/todo-service/src/utils/: pagination.js
services/todo-service/src/validators/: index.js  todo.validator.js  user.validator.js
webui/: package-lock.json
